programs/tests/invalid_Programs/bad_type.kln
(*not a valid type,but valid token identifier*)
function bad_type(a : interger) : boolen
    print(37)
    25